--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "dev": "npm run server:dev",
     "prod": "npm run lint && npm run build && npm run server:prod",
     "build": "vite build",
-    "server": "node --loader ts-node/esm ./server/index.ts",
+    "server": "node --loader ts-node/esm ./src/server/index.ts",
     "server:dev": "npm run server",
     "server:prod": "cross-env NODE_ENV=production npm run server",
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.10",
@@ -26,6 +27,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
