--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../../tsconfig.json",
   // Make IDEs complain about missing file extension .js in import paths.
   // Alternatively, we could always set "module" to "Node16" and add the file extension .js to import paths everywhere.
   "compilerOptions": {
