--- a/package.json
+++ b/package.json
@@ -27,12 +27,20 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "vite": "^4.4.9",
     "vite-plugin-ssr": "^0.4.142"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12"
+  }
 }
