--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^4.0.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "eslint": "^8.47.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
