--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "sirv": "^2.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "universal-cookie": "^7.2.0",
     "vite": "^4.4.9",
     "vite-plugin-ssr": "^0.4.142"
   },
