--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "sirv": "^2.0.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "universal-cookie": "^7.2.0",
